Actualizo sitio para GitHub Pages

--- a/_includes/en/footer.html
+++ b/_includes/en/footer.html
@@ -1,33 +1,31 @@
 ---
 layout: default_style
-lang: es
+lang: en
 ---
-
-
 <!-- Footer -->
 <footer> 
   
   <div class="container">
     <div class="row">
       <div class="col-md-4">
-        <h3><i class="fa fa-map-marker"></i> Contacto:</h3>
+        <h3><i class="fa fa-map-marker"></i> Contact:</h3>
         <p class="footer-contact">
           {{ site.company_name }} <br>
-          Horario: Lunes a Sábados de 10 a 20 hs. <br> 
-          Celular: {{ site.telephone_number }} <br>
-          E-mail: {{ site.company_email }}<br>
+          Hours: Monday to Saturday from 10 am to 8 pm <br> 
+          Phone: {{ site.telephone_number }} <br>
+          Email: {{ site.company_email }}<br>
         </p>
       </div>
       <div class="col-md-4">
         <h3><i class="fa fa-external-link"></i> Links</h3>
-        <p><a href="/about.html"> Quienes Somos </a></p>
-        <p><a href="/#services"> Servicios </a></p>
-        <p><a href="/contact.html"> Contacto </a></p>
-        <!-- <p><a href="/blog"> Blog ( Write to us )</a></p> 
-         <p><a href="/team"> Team ( Meet the Team )</a></p>  -->
+        <p><a href="/en/about.html"> About Us </a></p>
+        <p><a href="/en/#services"> Services </a></p>
+        <p><a href="/en/contact.html"> Contact </a></p>
+        <!-- <p><a href="/en/blog"> Blog ( Write to us )</a></p> 
+         <p><a href="/en/team"> Team ( Meet the Team )</a></p>  -->
       </div>
       <div class="col-md-4">
-        <h3><i class="fa fa-heart"></i> Redes Sociales</h3>
+        <h3><i class="fa fa-heart"></i> Social Media</h3>
         <div id="social-icons">
 
           {% if site.facebook_link %}
@@ -49,8 +47,8 @@ lang: es
   </div>
 
   <div class="copyright text center">
-    <p>&copy; Copyright {{ site.time | date: '%Y' }}, <a href="/">TIM Masajes</a>. 
-      <p>Todos los derechos reservados &copy; 2023 Terapia Integral de Masajes</p>
+    <p>&copy; Copyright {{ site.time | date: '%Y' }}, <a href="/en/">TIM Massages</a>. 
+      <p>All rights reserved &copy; 2023 Integral Massage Therapy</p>
       <!-- <br>Theme ported by <a href="https://melvinchng.github.io/" target="_blank">Melvin Ch'ng</a></p> -->
   </div>
 
